Fix: The reply area was not filling the screen on small displays.

--- a/assets/admin/less/admin.less
+++ b/assets/admin/less/admin.less
@@ -155,7 +155,7 @@ Ticket Replies
 */
 
 .wpas-table-replies {
-	table-layout: fixed;
+	table-layout: auto;
 	.col1 {
 		width: 90px;
 	}
